@@ -1,4 +1,4 @@
 
 To start the server:
 
-java -Djava.security.manager -Djava.security.policy=mysecurity.policy LargerHttpd port maxthreads
+java LargerHttpd <port> <maxthreads>
